syntax = "proto3";

package Editor;

message UniTexture {
  string YamlPath = 1;
}